# ELF-Toolchain

./: .gitignore  CMakeLists.txt  Linux_x64_loader.cpp  build_data_obfuscator.sh  build_elf_obfuscator.sh  build_elf_stripper.sh  build_loader.sh  build_obfuscator.sh  build_stripper.sh  clean_build.sh  pack.sh  pack_executable.sh  readme.md
basic/: basic_elf_loader.h  basic_loader.h  file_id_entity.h  flags_entity.h
basic/exec_file_formats/: check_file_format.cpp  check_file_format.h
basic/exec_file_formats/elf/: basic_elf_file.h  elf.h
basic/loader/: basic_loader.h
basic/loader/elf/: basic_elf_loader.h
basic/packer/: basic_packer.h
basic/packer/elf/: elf_packer.h
basic/packer/obfuscation/: encryption.h  obfuscation.h
basic/utils/: basic_file.h  file.h  process_vars.h  stack.h  udata.h
exec_file_formats/: exec_file_format.h
exec_file_formats/elf/: elf_file.h  elf_flags.h  elf_lib.h
main/loader/: Linux_x64_loader.cpp
main/packer/: obfuscator.cpp  packed_file.cpp
scripts/: bin_file_to_header.py
src/abstract/data_obfuscation/: compression.cpp  compression.h  encoding.cpp  encoding.h  encryption.cpp  encryption.h  obfuscation.cpp  obfuscation.h
src/abstract/loading/: basic_loader.h
src/abstract/packing/: basic_packed_file.h
src/abstract/utils/: macros.h  process_vars.h  raw_file.cpp  raw_file.h  stack.h  udata.h
src/exec_file_formats/: check_file_format.cpp  check_file_format.h  exec_file_format.h
src/exec_file_formats/elf/: basic_elf_file.cpp  basic_elf_file.h  elf.h  my_elf.h
src/exec_file_formats/elf/loading/: basic_elf_loader.h  elf_load_flags.h
src/exec_file_formats/elf/obfuscating/: elf_obfuscator.h
src/exec_file_formats/elf/packing/: elf_strip.h  packed_elf.h
src/exec_file_formats/elf/strip/: elf_strip.h  elf_stripper.h  parse.h
src/exec_file_formats/elf/stripping/: elf_stripper.h
src/general_unix/: error_codes.h
src/general_unix/elf/: basic_unix_elf_loader.h
src/general_unix/files/: file_helper_funcs.cpp  file_helper_funcs.h  opened_unix_file.cpp  opened_unix_file.h
src/linux_x64/: properties.h
src/linux_x64/elf/: jump_signatures.cpp  jump_signatures.h  linux_x64_elf_loader.cpp  linux_x64_elf_loader.h
src/main/data_obfuscator/: data_obfuscator.cpp
src/main/elf/loading/: elf_loader_linux_x64.cpp
src/main/elf/obfuscating/: elf_obfuscator.cpp
src/main/elf/packing/: packed_elf_linux_x64.cpp
src/main/elf/stripping/: elf_stripper.cpp
src/main/file_obfuscator/: obfuscator.cpp
src/main/loading/: elf_loader_linux_x64.cpp
src/main/packing/: packed_elf_linux_x64.cpp
unix/: basic_unix_elf_loader.h  error_codes.h  file_helper_funcs.cpp  file_helper_funcs.h  opened_unix_file.cpp  opened_unix_file.h
unix/linux_x64/: linux_x64_elf_loader.cpp  linux_x64_elf_loader.h
unix_based/: opened_elf_file.h  opened_unix_file.cpp  opened_unix_file.h  unix_based_elf_loader.h  unix_based_loader.cpp  unix_based_loader.h
unix_based/include/: error_codes.h
unix_based/linux_x64/: linux_x64_loader.cpp  linux_x64_loader.h
utils/: macros.h  proc_var.h  stack.h
